# project-templates

./: .gitattributes  README.md  install.sh
.shared/Licenses/: BSD-3-Clause.txt
.shared/licenses/: BSD-2-Clause.txt
LICENSES/: BSD-2-Clause.txt  BSD-3-Clause.txt  MIT.txt
python-application/: cookiecutter.json
python-application/{{cookiecutter.binary_name}}/: pyproject.toml
python-application/{{cookiecutter.binary_name}}/src/{{cookiecutter.project_slug}}/: application.py
python-application/{{cookiecutter.project_dir_name}}/: checks  pyproject.toml
python-library/: cookiecutter.json
python-library/hooks/: post_gen_project.py
python-library/{{cookiecutter.binary_name}}/: pyproject.toml
python-library/{{cookiecutter.project_dir_name}}/: pyproject.toml
python-package/: cookiecutter.json
python-package/{{cookiecutter.project_dir_name}}/: pyproject.toml
python-package/{{cookiecutter.project_dir_name}}/src/{{cookiecutter.project_slug}}/: __main__.py  application.py
python-project/: cookiecutter.json
python-project/hooks/: post_gen_project.py
python-project/{{cookiecutter.binary_name}}/: README.md  checks  pyproject.toml
python-project/{{cookiecutter.binary_name}}/src/{{cookiecutter.project_slug}}/: application.py
python-project/{{cookiecutter.binary_name}}/tests/: test_package_version_in_sync.py
python_package/: cookiecutter.json
python_package/hooks/: post_gen_project.py
python_package/{{cookiecutter.project_slug}}/: .flake8
python_package/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __main__.py  application.py
python_package/{{cookiecutter.project_slug}}/tests/: test_package_version.py
