[project]
name = "{{ cookiecutter.binary_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [
    {name = "{{ cookiecutter.author }}",email = "{{ cookiecutter.email }}"}
]
readme = "README.md"
{%- if cookiecutter.license != "None" %}
license = "{{ cookiecutter.license }}"
{%- endif %}
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
]

[tool.poetry]
packages = [{include = "{{ cookiecutter.project_slug }}", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
mypy = "^1.19.0"
pytest = "^8.4.2"
ruff = "^0.14.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = {{ cookiecutter.max_line_length }}
skip-magic-trailing-comma = true

[tool.isort]
line_length = {{ cookiecutter.max_line_length }}
profile = "black"

[tool.mypy]
strict = true
{%- if cookiecutter.project_type == "application" %}

[tool.poetry.scripts]
{{ cookiecutter.binary_name }} = "{{ cookiecutter.project_slug }}.__main__:main"
{%- endif %}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-ignore = ["E203", "E501", "COM812", "COM819"]
select = [
    "E", "F", "N", "UP", "ANN", "TCH", "TC",
    "A", "I", "C4", "B", "SIM", "PERF", "PTH", "RET", "TRY", "Q",
    "RUF", "DTZ", "ERA", "PIE", "TID", "S", "FA",
    "FURB", "PGH", "BLE", "FLY", "RSE", "COM",
    "ISC", "ASYNC", "LOG", "ARG",
    "TD", "PLW", "EM",
    "PLR", "C90"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004"]
